--- a/index .html
+++ b/index .html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spotify-Web Player:Music For Everyone</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="icon" href="logo.png">
+  <link rel="icon" href="logo.webp">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -53,8 +53,8 @@
     <div class="stickynav" style="display:flex">
        
           <div class="stimg">
-            <img src="backward_icon.png" alt="">
-            <img src="forward_icon.png" class="hide" alt="">
+            <img src="backward_icon.webp" alt="">
+            <img src="forward_icon.webp" class="hide" alt="">
           </div>
          <div class="stbut">
           <button class="badge navitem">Explore Premium</button>
@@ -67,7 +67,7 @@
     <h2>Recently Played</h2>
     <div class="cardcontainer">
       <div class="card">
-        <img src="card1img.jpeg" alt="" class="cardimg">
+        <img src="card1img.webp" alt="" class="cardimg">
         <p class="cardtitle">Top 50-Global</p>
         <p class="cardinfo">Your daily update of </p>
         <p class="cardinfo">most played tracks ...</p>
@@ -77,30 +77,30 @@
     <h2 class="ndline">Recently Played</h2>
     <div class="cardcontainer">
       <div class="card">
-        <img src="card2img.jpeg" alt="" class="cardimg">
+        <img src="card2img.webp" alt="" class="cardimg">
         <p class="cardtitle">Top 50-Global</p>
         <p class="cardinfo">Your daily update of </p>
         <p class="cardinfo">most played tracks ...</p>
       </div>
       <div class="card">
-        <img src="card3img.jpeg" alt="" class="cardimg">
+        <img src="card3img.webp" alt="" class="cardimg">
         <p class="cardtitle">Top 50-Global</p>
         <p class="cardinfo">Your daily update of </p>
         <p class="cardinfo">most played tracks ...</p>
       </div><div class="card">
-        <img src="card4img.jpeg" alt="" class="cardimg">
+        <img src="card4img.webp" alt="" class="cardimg">
         <p class="cardtitle">Top 50-Global</p>
         <p class="cardinfo">Your daily update of </p>
         <p class="cardinfo">most played tracks ...</p>
       </div>
       <div class="card">
-        <img src="card2img.jpeg" alt="" class="cardimg">
+        <img src="card2img.webp" alt="" class="cardimg">
         <p class="cardtitle">Top 50-Global</p>
         <p class="cardinfo">Your daily update of </p>
         <p class="cardinfo">most played tracks ...</p>
       </div>
       <div class="card">
-        <img src="card4img.jpeg" alt="" class="cardimg">
+        <img src="card4img.webp" alt="" class="cardimg">
         <p class="cardtitle">Top 50-Global</p>
         <p class="cardinfo">Your daily update of </p>
         <p class="cardinfo">most played tracks ...</p>
@@ -111,13 +111,13 @@
     <div class="cardcontainer">
       
       <div class="card">
-        <img src="card5img.jpeg" alt="" class="cardimg">
+        <img src="card5img.webp" alt="" class="cardimg">
         <p class="cardtitle">Top 50-Global</p>
         <p class="cardinfo">Your daily update of </p>
         <p class="cardinfo">most played tracks ...</p>
       </div>
       <div class="card">
-        <img src="card6img.jpeg" alt="" class="cardimg">
+        <img src="card6img.webp" alt="" class="cardimg">
         <p class="cardtitle">Top 50-India</p>
         <p class="cardinfo">Your daily update of </p>
         <p class="cardinfo">most played tracks ...</p>
