--- a/index .html
+++ b/index .html
@@ -27,7 +27,7 @@
     <div class="library">
       <div class="options">
         <div class="liboptions navoption">
-          <img src="library_icon.png" alt="">
+          <img src="library_icon.webp" alt="">
           <a href="#">Your Library</a>
         </div>
         <div class="icons">
